# CSCI444_FinalProject

./: CMakeLists.txt
FinalProject/: CMakeLists.txt  main.cpp  scenewave.cpp  scenewave.h
FinalProject/shader/: CMakeLists.txt  wave_frag.glsl  wave_vert.glsl
ingredients/: CMakeLists.txt  scenerunner.h  skybox.cpp
